<resources>
    <string name="app_name">AlfagiftTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="search">Search</string>
    <string name="wellcome_text">Hi, Wellcome to</string>
    <string name="app_title">Simply News</string>
    <string name="dumy_news_category">News Category</string>
    <string name="default_source_name">Source Name</string>
    <string name="default_source_category">Source Category</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="title_news_sources">News Sources</string>
    <string name="source_page_desc">Choose your news sources for better reference</string>
    <string name="default_author">author</string>
    <string name="default_article_title">Article Title</string>
    <string name="empty_message">Ooops, data can\'t be found</string>
</resources>