<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="6dp"
    android:layout_marginVertical="6dp"
    android:padding="12dp"
    app:cardCornerRadius="18dp"
    android:backgroundTint="@color/ocean_blue">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="14dp">

        <ImageView
            android:id="@+id/img_article"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/img_science"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_article_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/default_author"
            android:textColor="@color/navy"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/img_article"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:text="•"
            android:textColor="@color/navy"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@+id/tv_article_author"
            app:layout_constraintLeft_toRightOf="@+id/tv_article_author"
            app:layout_constraintBottom_toBottomOf="@id/tv_article_author"/>
        <TextView
            android:id="@+id/tv_article_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:text="00 feb 0000"
            android:textColor="@color/navy"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="@id/tv_article_author"
            app:layout_constraintLeft_toRightOf="@id/dot"/>
        <TextView
            android:id="@+id/tv_article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/default_article_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_article_author"/>

        <TextView
            android:id="@+id/tv_source_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_article_title"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:ellipsize="end"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>