<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="18dp"
    tools:context=".Page.Article.ListArticleActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:indeterminateTint="@color/navy"
        android:visibility="gone"/>

    <include
        android:id="@+id/error_layout"
        layout="@layout/layout_error"
        android:visibility="gone"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_article"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    <TextView
        android:id="@+id/tv_source_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/default_source_name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/img_webView"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_source_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:text="@string/default_source_category"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/tv_source_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_source_name" />


        <ImageView
            android:id="@+id/img_webView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="24dp"
            android:src="@drawable/ic_earth"
            app:layout_constraintBottom_toBottomOf="@+id/tv_source_category"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_source_name" />

        <TextView
            android:id="@+id/tv_source_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_source_category" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/edt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/bg_search_bar"
            android:elevation="15dp"
            android:iconifiedByDefault="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_source_description" />


        <include
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:id="@+id/emptyLayout"
            layout="@layout/layout_empty_data"
            app:layout_constraintTop_toBottomOf="@id/edt_search"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_article"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edt_search"
            tools:listitem="@layout/item_article" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>